# starbase

./: .coderabbit.yaml  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/docs/: package.json
apps/stub-app/: package.json
apps/stub-app/src/: index.ts
crates/neon/: Cargo.toml
crates/neon/src/: doctor.rs  install.rs  main.rs  repo.rs  setup.rs
crates/neon/src/doctor/: widgets.rs
crates/neon/src/setup/: languages.rs  packages.rs  secrets.rs  terminal_theme.rs
crates/starbase/: Cargo.toml  pantry.toml
crates/starbase-db/: Cargo.toml
crates/starbase-db/migrations/: 0001_initial_schema.sql
crates/starbase-db/src/: lib.rs
crates/starbase-db/src/entities/: mod.rs
crates/starbase/examples/: widget_preview.rs
crates/starbase/src/: install.rs  main.rs  repo.rs  setup.rs
crates/starbase/src/doctor/: widgets.rs
crates/starbase/src/setup/: diagnostics.rs  docker.rs  git_identity.rs  languages.rs  (+4 more)
crates/starbase/themes/: synthwave84.yml
crates/stub-crate/: Cargo.toml
crates/stub-crate/src/: lib.rs
docs/adr/: 0001-use-hybrid-turborepo-cargo-workspace.md  0002-open-source-from-start.md
docs/architecture/: overview.md  repo-setup-automation.md  setup-tui.md
docs/product/: phase-0.md  vision.md
fixtures/: README.md
templates/: README.md
(+3 files in other folders)
