[workspace]
resolver = "2"
members = [
  "crates/stub-crate",
  "crates/starbase",
  "crates/starbase-db"
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/andromeda-engineering/starbase"
homepage = "https://github.com/andromeda-engineering/starbase"
documentation = "https://github.com/andromeda-engineering/starbase"
readme = "README.md"

[workspace.dependencies]
